--- a/notebook/06.05-Naive-Bayes.ipynb
+++ b/notebook/06.05-Naive-Bayes.ipynb
@@ -226,8 +226,8 @@
     "Step 1: Convert the data set into a frequency table\n",
     "\n",
     "Step 2: Create Likelihood table by finding the probabilities like:\n",
-    "- p(Overcast) = 0.29, p(rainy) = 0.36, p(sunny) = 0.36\n",
-    "- p(playing) = 0.64, p(rest) = 0.36\n",
+    "- p(Overcast) = 0.29, p(Rainy) = 0.36, p(Sunny) = 0.36\n",
+    "- p(Playing) = 0.64, p(Rest) = 0.36\n",
     "\n",
     "Step 3: Now, use Naive Bayesian equation to calculate the posterior probability for each class. The class with the highest posterior probability is the outcome of prediction."
    ]
